--- a/css/styleCandidature3.css
+++ b/css/styleCandidature3.css
@@ -359,7 +359,7 @@ a {
 
 
 
-.bonjourSvgContainer:hover .bonjourSvgPath {
+/* .bonjourSvgContainer:hover .bonjourSvgPath {
     animation: logoColorSwitch 1.5s 1.7s ease forwards, papillonAnim1 1.7s 0s linear forwards infinite;
 }
 .bonjourSvgContainer:hover .bonjourSvgPath2 {
@@ -367,7 +367,7 @@ a {
 }
 .bonjourSvgContainer:hover .bonjourSvgPath3 {
     animation: logoColorSwitch 1.5s 1.7s ease forwards, papillonAnimCorp 1.7s 0s linear forwards infinite;
-}
+} */
 
 .bonjourSvgPath {
     opacity: 1;
@@ -557,7 +557,8 @@ a {
 .presentationParagraph {
     position: relative;
     font-family: Open Sans,sans-serif;
-    color: var(--white);
+    /* color: var(--white); */
+    color: rgb(8, 8, 8);
     width: 46%;
     margin: 0 auto;
     text-align: left;
@@ -568,15 +569,20 @@ a {
     /* background: #21606f85;
     background: -webkit-linear-gradient(to bottom, #6f6e2185, #77b78f);
     background: linear-gradient(to bottom, #6f6e2185, #77b78f); */
-    background: #57b57a;
+    /* background: #57b57a;
     background: -webkit-linear-gradient(to bottom, #b4cb73, #57b57a);
-    background: linear-gradient(to bottom, #b4cb73, #57b57a);
+    background: linear-gradient(to bottom, #b4cb73, #57b57a); */
+    background: #83838312;
 
     padding: 30px 31px;
     border-radius: 12px;
-    box-shadow: 1px 5px 1px 1px #cc2865;
+    box-shadow: 7px 7px 1px 1px #cc2865;
 
     max-height: 850px;
+
+    z-index: 9999;
+
+    overflow: hidden;
 
     transition: all 1.2s;
 }
@@ -593,12 +599,48 @@ a {
 }
 
 
+
+#presentationParagraph::after {
+    content: url(../img/projects/bgShapes1_bjj.png);
+    position: absolute;
+    right: 0;
+    bottom: -57px;
+    width: 100%;
+    height: auto;
+    opacity: 0.2;
+    overflow: hidden;
+
+    z-index: -1;
+
+    filter: blur(2px);
+}
+
+/* .candidatureShapes {
+    position: absolute;
+    bottom: -13px;
+    right: -60px;
+    width: 50%;
+    opacity: 0;
+    height: auto;
+
+    animation: fadeInShapes 1s 2.5s ease forwards;
+}
+@keyframes fadeInShapes {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0.1;
+    }
+} */
+
+
 .hideBtn {
     position: absolute;
     cursor: pointer;
     right: 15px;
     top: -14px;
-    background-color: #98efba;
+    background-color: #ffffff00;
     padding: 0px 10px;
     line-height: 0;
     font-size: 1.3em;
@@ -682,10 +724,10 @@ strong {
     font-size: 1.5em;
     transform: rotate(89deg);
     font-weight: 100;
-    color: #c4e95a;
+    color: #eef1e7;
     position: absolute;
-    right: 22px;
-    bottom: -2px;
+    right: 24px;
+    bottom: -1px;
 
     font-weight: bold;
 
@@ -696,7 +738,7 @@ strong {
 
 .portfolioLink {
     position: relative;
-    color: #c4e95a;
+    color: #eef1e7;
     margin: 40px auto 15px auto;
     width: fit-content;
     padding: 14px 16px;
@@ -711,7 +753,7 @@ strong {
 }
 .portfolioLink:hover {
     color: #cc2865;
-    background-color: #def770;
+    background-color: #f6f2f4;
     letter-spacing: 1px;
 
     box-shadow: 5px 5px #235585;
@@ -739,7 +781,8 @@ strong {
 
 .portfolioLink:hover .smileSpan {
     color: #cc2865;
-    bottom: -9px;
+    /* bottom: -9px; */
+    bottom: -6px;
     right: 21px;
     transform: rotate(90deg) rotateY(58deg);
     font-size: 2em;
